--- a/src/Menus/TopMenu/top-menu.html
+++ b/src/Menus/TopMenu/top-menu.html
@@ -43,11 +43,190 @@
         <span class="tooltip">Random Payoffs</span>
     </div>
     <div id="zero-sum-wrapper" class="button-wrapper">
-        <img src="src/Assets/Images/TopMenu/zeroSum.png" class="top-menu-img">
+        <img src="src/Assets/Images/TopMenu/nonZeroSum.png" class="top-menu-img">
         <span class="tooltip">Zero Sum Toggle</span>
     </div>
+
     <div id="fraction-decimal-wrapper" class="button-wrapper">
-        <img src="src/Assets/Images/TopMenu/decimal.png" class="top-menu-img">
+        <img src="src/Assets/Images/TopMenu/fraction.png" class="top-menu-img">
         <span class="tooltip">Fraction/Decimal</span>
+    </div>
+        <button id="strat-form-button" class="button-wrapper">STRATEGIC FORM</button>
+
+    <div id="settings-button-wrapper" class="button-wrapper">
+        <img src="src/Assets/Images/TopMenu/settings.png" class="top-menu-img">
+        <span class="tooltip">Settings</span>
+    </div>
+
+    <div id="video-button-wrapper" class="button-wrapper">
+        <img src="src/Assets/Images/TopMenu/play.png" class="top-menu-img">
+        <span class="tooltip">Tutorial</span>
+    </div>
+
+    <div id="info-button-wrapper" class="button-wrapper">
+        <img src="src/Assets/Images/TopMenu/info.png" class="top-menu-img">
+        <span class="tooltip">Information</span>
+    </div>
+
+
+
+    <div class="info-main-container">
+        <div class="close-info">
+            <img src="src/Assets/Images/TopMenu/close-info.png" class="close-info-img">
+        </div>
+        <div id="title" class="row">
+            <div class="section-text">
+                <div class="explain">KEYBOARD SHORTCUTS</div>
+            </div>
+        </div>
+        <div id="n" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">n</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Adds children to selected nodes</div>
+            </div>
+        </div>
+        <div id="delete" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">d / delete</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Deletes all children from the selected nodes. If a node has no children, then it is removed</div>
+            </div>
+        </div>
+        <div id="one-four" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">1-4</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Assigns the corresponding player to the selected nodes</div>
+            </div>
+        </div>
+        <div id="zero-or-c" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">0 / c</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Converts the selected nodes to chance nodes</div>
+            </div>
+        </div>
+        <div id="i" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">i</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Creates an information set with the selected nodes, if possible</div>
+            </div>
+        </div>
+        <div id="u" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">u</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Unlinks/removes information sets from the selected nodes</div>
+            </div>
+        </div>
+        <div id="c" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">c</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Cuts information sets</div>
+            </div>
+        </div>
+        <div id="enter" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">enter</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Saves the label text and moves to the next label</div>
+            </div>
+        </div>
+        <div id="tab" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">tab</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Moves to the next label in editing mode</div>
+            </div>
+        </div>
+        <div id="shift-tab" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">shift+tab</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Moves to the previous label in editing mode</div>
+            </div>
+        </div>
+        <div id="esc" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">esc</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Exits the label editing mode</div>
+            </div>
+        </div>
+        <div id="alt-n" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">alt+n</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Starts a new tree</div>
+            </div>
+        </div>
+        <div id="alt-s" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">alt+s</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Saves a tree into a .txt file</div>
+            </div>
+        </div>
+        <div id="alt-i" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">alt+i</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Saves the tree into a .jpg image</div>
+            </div>
+        </div>
+        <div id="ctrl-z" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">ctrl+z</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Undo</div>
+            </div>
+        </div>
+        <div id="ctrl-shift-z" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">ctrl+shift+z</div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Redo</div>
+            </div>
+        </div>
+        <div id="arrow-keys" class="row">
+            <div class="section-hotkey">
+                <div class="hotkey">&uarr; &darr; &larr; &rarr; </div>
+            </div>
+            <div class="section-text">
+                <div class="explain">Manually reposition selected nodes</div>
+            </div>
+        </div>
+
+    </div>
+    <div class="settings-menu-container">
+        <div class="title">Tree Width</div>
+        <div class="range-slider-tree">
+            <input class="input-range-tree input-range" type="range" value="50" min="0" max="100">
+            <input class="input-field-tree input-field" type="text" value="">
+        </div>
+        <div class="title">Level Height</div>
+        <div class="range-slider-level">
+            <input class="input-range-level input-range" type="range" value="50" min="0" max="100">
+            <input class="input-field-level input-field" type="text" value="">
+        </div>
     </div>
 </div>
