--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <script src="lib/jquery-3.2.1.min.js"></script>
     <script src="lib/FileSaver.js"></script>
+    <script src="lib/mathjs.js"></script>
+
     <script src="src/Utils/Constants.js"></script>
 
     <script src="src/Menus/TopMenu/TopMenu.js"></script>
